--- a/_doc/sphinxdoc/source/dessin_anime/a1996.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a1996.rst
@@ -4,7 +4,7 @@
 
 .. quote::
     :author: Nahoko Uehashi
-    :book: Seirei no moribito
+    :manga: Seirei no moribito
     :index: déchet
     :year: 1996
 
