--- a/_doc/sphinxdoc/source/dessin_anime/a2016.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a2016.rst
@@ -4,7 +4,7 @@
 
 .. quote::
     :author: Kaiu Shirai, Posuka Demizu
-    :book: The Promised Neverland
+    :manga: The Promised Neverland
     :index: huis-clos
     :year: 2016
 
