--- a/_doc/sphinxdoc/source/dessin_anime/a2017.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a2017.rst
@@ -4,7 +4,7 @@
 
 .. quote::
     :author: Soichi Masui
-    :book: Sakura Quest
+    :manga: Sakura Quest
     :index: vie
     :year: 2017
 
@@ -17,3 +17,18 @@
 
     Aucune idée ne fonctionne ni tout-à-fait, ni n'échoue complètement.
     L'aventure s'arrête au bout d'un an. Mais quelle formidable aventure.
+
+.. quote::
+    :author: Reiji Miyajima
+    :manga: Kanojo, okarishimasu
+    :index: vie
+    :year: 2017
+
+    `Rent-A-Girlfriend <https://fr.wikipedia.org/wiki/Rent-A-Girlfriend>`_
+
+    L'idée de départ est surprenante.
+    Le héros est éconduit par celle qu'il aime. Il loue les services
+    d'une petite amie pour aller rendre visite à sa grand-mère qui
+    est malade. Les deux personnages évoluent constamment 
+    entre amour et répulsion. Les mensonges s'accumulent et il devient
+    toujours plus délicat de s'en extirper.
