--- a/_doc/sphinxdoc/source/dessin_anime/a2019.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a2019.rst
@@ -4,7 +4,7 @@
 
 .. quote::
     :author: Tatsuya Endō
-    :book: Spy X Family
+    :manga: Spy X Family
     :index: espionnage
     :year: 2019
 
