--- a/_doc/sphinxdoc/source/dessin_anime/a1989.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a1989.rst
@@ -7,6 +7,7 @@
     :manga: Berseck
     :index: poésie
     :year: 1989
+    :title1: true
 
     `Berseck <https://fr.wikipedia.org/wiki/Berserk_(manga)>`_
 
