--- a/_doc/sphinxdoc/source/dessin_anime/a1985.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a1985.rst
@@ -7,6 +7,7 @@
     :manga: Dragon Ball
     :index: candeur
     :year: 1985
+    :title1: true
 
     `Dragon Ball <https://fr.wikipedia.org/wiki/Dragon_Ball>`_
 
