--- a/_doc/sphinxdoc/source/dessin_anime/a2008.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a2008.rst
@@ -7,6 +7,7 @@
     :manga: Bōnen no Xamdou
     :index: épopée
     :year: 2008
+    :title1: true
 
     `Bōnen no Xamdou <https://fr.wikipedia.org/wiki/B%C5%8Dnen_no_Xamdou>`_
 
@@ -22,6 +23,7 @@
     :manga: Casshern Sins
     :index: modernité
     :year: 2008
+    :title1: true
 
     `Casshern Sins <https://fr.wikipedia.org/wiki/Casshern_Sins>`_
 
@@ -35,6 +37,7 @@
     :manga: Michiko to Hatchin
     :index: fuite
     :year: 2008
+    :title1: true
 
     `Michiko to Hatchin <https://fr.wikipedia.org/wiki/Michiko_to_Hatchin>`_
 
@@ -46,6 +49,7 @@
     :manga: Mnemosyne
     :index: noir
     :year: 2008
+    :title1: true
 
     `Mnemosyne <https://fr.wikipedia.org/wiki/Mnemosyne_(anime)>`_
 
