--- a/_doc/sphinxdoc/source/dessin_anime/a2016.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a2016.rst
@@ -7,6 +7,7 @@
     :manga: The Promised Neverland
     :index: huis-clos
     :year: 2016
+    :title1: true
 
     `The Promised Neverland <https://fr.wikipedia.org/wiki/The_Promised_Neverland>`_
 
