--- a/_doc/sphinxdoc/source/series/s2000.rst
+++ b/_doc/sphinxdoc/source/series/s2000.rst
@@ -7,6 +7,7 @@
     :show: The Gilmore Girls
     :index: famille
     :year: 2000
+    :title1: true
 
     `The Gilmore Girls <https://fr.wikipedia.org/wiki/Gilmore_Girls>`_
 
