--- a/_doc/sphinxdoc/source/series/s2004.rst
+++ b/_doc/sphinxdoc/source/series/s2004.rst
@@ -7,6 +7,7 @@
     :show: Battelstar Gallactica
     :index: huis-clos
     :year: 2004
+    :title1: true
 
     `Battelstar Gallactica <https://en.wikipedia.org/wiki/Battlestar_Galactica_(2004_TV_series)>`_
 
