--- a/_doc/sphinxdoc/source/films/f1960.rst
+++ b/_doc/sphinxdoc/source/films/f1960.rst
@@ -1,6 +1,6 @@
-====
-1959
-====
+=====
+1960-
+=====
 
 .. quote::
     :author: Billy Wilder
@@ -12,3 +12,15 @@
     `La Garçonnière <https://fr.wikipedia.org/wiki/La_Gar%C3%A7onni%C3%A8re_(film,_1960)>`_
 
     Jack Lemmon est toujours irrésistible.
+
+.. quote::
+    :author: Rose Wise
+    :film: Deux sur la balançoire
+    :index: drame
+    :year: 1962
+    :title1: true
+
+    `Deux sur la balançoire <https://fr.wikipedia.org/wiki/Deux_sur_la_balan%C3%A7oire_(film)>`_
+
+    C'est un film méconnu. Deux personnages se croisent, discutent,
+    se découvrent. Deux vies bancales qui ont choisi de partager un trépied.
