--- a/_doc/sphinxdoc/source/livres/l1950.rst
+++ b/_doc/sphinxdoc/source/livres/l1950.rst
@@ -3,19 +3,13 @@
 =====
 
 .. quote::
-    :author: Joseph Kessel
-    :book: Le Lion
-    :index: enfant
-    :year: 1958
+    :author: Marguerite Yourcenar
+    :book: Les mémoires d'Hadrien
+    :index: histoire
+    :year: 1951
     :title1: true
+    :source: https://fr.wikipedia.org/wiki/M%C3%A9moires_d%27Hadrien
 
-    `Le Lion <https://fr.wikipedia.org/wiki/Le_Lion_(roman)>`_
-
-    Le premier livre qui m'ait laissé une émotion.
-    Un cadeau que j'ai longtemps regardé de travers dans un coin.
-    Et je l'ai dévoré à l'heure de la sieste dans le Sud de la France.
-    C'est la première fois aussi qu'il était difficile pour les
-    adultes de penser en dehors des clous, comme s'il était impossible
-    de trouver un chemin qui n'ait pas déjà été suivi,
-    comme si à chaque fois qu'un adulte regardait un enfant,
-    il connaissait la suite.
+    Peu de livres m'ont fait aimé la langue française comme celui-là.
+    L'auteur fait parler le gouverneur Romain à propos de son pouvoir.
+    A lire.
