--- a/_doc/sphinxdoc/source/disc/d1970.rst
+++ b/_doc/sphinxdoc/source/disc/d1970.rst
@@ -5,7 +5,7 @@
 .. quote::
     :author: Keith Jarrett
     :disc: The Köln Concert
-    :index: création
+    :index: jazz
     :year: 1975
     :title1: true
     :source: https://fr.wikipedia.org/wiki/The_K%C3%B6ln_Concert
